src/html/index.css
body {
  background-color: hsla(50,20%,90%,1);
  font-family: helvetica, sans-serif;
  color: hsla(100,10%,25%,1);
  margin: 2em;
}

.component {
  background-color: hsla(50,20%,95%,1);
  /*width: 400px;*/
  padding: 1em;
  margin: 2em;
  border-radius: 0.2em;
  box-shadow: 1px 1px 4px hsla(0,0%,50%,0.5);
}

.menu-bar {
    font-family: 'Arial', 'Helvetica', 'sans-serif';
    position: absolute;
    top: 0px;
    left: 0px;
    right: 0px;
    background-color: #105262;
    padding: 8px;
    color: #fff;
    height: 30px;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-content: flex-end;
    align-items: center;
}

.window {
    position: relative;
    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.25);
    border-radius: 6px;
    /*border: 1px solid white;*/
    border-top-right-radius: 6px;
    border-top-left-radius: 6px;
    background-color: white;
    user-select: none;
}

.window iframe {
  border: none;
}

.window .rightGrow {
  position: absolute;
  top: 0px;
  right: 0px;
  bottom: 0px;
  width: 4px;
  cursor: ew-resize;
}

.window .bottomGrow {
  position: absolute;
  right: 0px;
  left: 0px;
  height: 4px;
  bottom: 0px;
  cursor: ns-resize;
}

.window .bottomRightGrow {
  position: absolute;
  right: 0px;
  width: 10px;
  height: 10px;
  bottom: 0px;
  cursor: se-resize;
}

.window-selected {
  box-shadow: 0 1px 20px 0 rgba(0,0,0,0.25);
}

.iFrameHider {
  position: absolute;
  background-color: white;
  opacity: 0.0;
  top: 25px;
  left: 0px;
  right: 20px;
  bottom: 20px;
}

.titlebar {
    position: relative;
    right: 0px;
    top: 0px;
    left: 0px;
    height: 25px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: #72bfca;
    color: white;
    border-radius: 6px 6px 0px 0px;
    user-select: none;
}

.titlebar.selected {
    background-color: #177991;
}

.container {
  position: absolute;
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
  background-image: url(img/bg-drid-grey.png);
  user-select: none;
}

